--- a/hai.html
+++ b/hai.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aldi Surya Saputra Songong</h1>
+    <h1>Aldi Surya Saputra </h1>
 </body>
 </html>
 //
